Details
Description
QNetworkAccessBackend pointer is sometimes NULL with an application that has two threads that issue network request. With the attached application the issue can be reproduced using an invalid url. Sometimes when the application is run the request is started and a correct error message is received: "Host www.ll.m not found". Occasionally the QNetworkAccessBackend pointer is NULL and error message: "Protocol "http" is unknown" is received.
When there is no backend the message is sent from QNetworkReplyImplPrivate::_q_startOperation().
The problem does not occur when threads are not used.
Attachments
Issue Links
- relates to
-
QTBUG-21877 Crash when using 2 QNetworAccessManagers from 2 different threads concurrently
- Closed
-
QTBUG-22371 Network operation returns ProtocolUnknownError error
- Closed
-
QTBUG-22107 Crash in QNetworkConfigurationManagerPrivate because of uninitialized member
- Closed